<resources>
    <string name="app_name">Collision Ball</string>
    <string name="action_settings">Settings</string>
    <string name="nbParticleLabel">#</string>
    <string name="nbParticle">0</string>
    <string name="progressSpeed">0</string>
    <string name="progressAngle">0</string>
    <string name="progressRadius">4</string>
    <string name="speedLabel">Vitesse</string>
    <string name="angleLabel">Angle</string>
    <string name="radiusLabel">Rayon</string>
    <string name="colorLabel">Couleur</string>
    <string name="generateButton">Générer</string>
    <string name="resetButton">Réinitialiser</string>
    <string name="exitButton">Quitter</string>
    <string-array name="color_array">
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Red</item>
        <item>Magenta</item>
    </string-array>

</resources>
