<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Vue">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <SurfaceView
            style="@style/CustomSurface"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/surfaceView"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.56"
            android:padding="3px" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.22"
            android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.21">

                <TextView
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/nbParticleLabel"
                    android:id="@+id/nbParticleLabel" />

                <TextView
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/nbParticle"
                    android:id="@+id/nbParticle" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.20">

                <TextView
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/speedLabel"
                    android:id="@+id/speedLabel" />

                <ProgressBar
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/speedBar" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.20">

                <TextView
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/angleLabel"
                    android:id="@+id/angleLabel" />

                <ProgressBar
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/angleBar" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.17">

                <TextView
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/radiusLabel"
                    android:id="@+id/radiusLabel" />

                <ProgressBar
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radiusBar" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/colorLabel"
                    android:id="@+id/colorLabel" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">


            <Button
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generateButton"
                android:layout_margin="10dp"
                android:id="@+id/generateButton" />

            <Button
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resetButton"
                android:layout_margin="10dp"
                android:id="@+id/resetButton" />

            <Button
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exitButton"
                android:layout_margin="10dp"
                android:id="@+id/exitButton" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
